cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
find_package(PCL 1.5 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})

add_executable(cluster cluster.cpp)
target_link_libraries(cluster ${PCL_LIBRARIES})
add_executable (esf esf.cpp)
target_link_libraries (esf ${PCL_LIBRARIES})
add_executable (viz viz.cpp)
target_link_libraries (viz ${PCL_LIBRARIES})
add_executable (correspondence_grouping correspondence_grouping.cpp)
target_link_libraries (correspondence_grouping ${PCL_LIBRARIES})
