cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
find_package(PCL 1.5 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
set(CMAKE_BUILD_TYPE Debug)

add_executable(cluster cluster.cpp)
target_link_libraries(cluster ${PCL_LIBRARIES})
add_executable (esf esf.cpp)
target_link_libraries (esf ${PCL_LIBRARIES})
add_executable (vfh vfh.cpp)
target_link_libraries (vfh ${PCL_LIBRARIES})
add_executable (fpfh fpfh.cpp)
target_link_libraries (fpfh ${PCL_LIBRARIES})
add_executable(our_cvfh our_cvfh.cpp)
target_link_libraries(our_cvfh ${PCL_LIBRARIES})
add_executable (grsd grsd.cpp rsd.hpp grsd.hpp)
target_link_libraries (grsd ${PCL_LIBRARIES})
add_executable (viz viz.cpp)
target_link_libraries (viz ${PCL_LIBRARIES})
add_executable (correspondence_grouping correspondence_grouping.cpp)
target_link_libraries (correspondence_grouping ${PCL_LIBRARIES})
add_executable (vizNeighbors vizNeighbors.cpp)
target_link_libraries (vizNeighbors ${PCL_LIBRARIES})
add_executable (template_alignment template_alignment.cpp)
target_link_libraries (template_alignment ${PCL_LIBRARIES})
add_executable (alignment_prerejective alignment_prerejective.cpp)
target_link_libraries (alignment_prerejective ${PCL_LIBRARIES})
add_executable(rgb rgb.cpp)
target_link_libraries(rgb ${PCL_LIBRARIES})
add_executable(curvature curvature.cpp)
target_link_libraries(curvature ${PCL_LIBRARIES})
add_executable(spin_image spin_image.cpp)
target_link_libraries(spin_image ${PCL_LIBRARIES})
add_executable(shot shot.cpp)
target_link_libraries(shot ${PCL_LIBRARIES})
add_executable(usc usc.cpp)
target_link_libraries(usc ${PCL_LIBRARIES})
